# remove-background

./: .gitignore  README.md  pyproject.toml
scripts/: start-nport.sh
src/remove_background/: __init__.py  api.py  cli.py  inference.py
tests/: test_api.py  test_cli.py  test_inference.py
